--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -53,7 +53,6 @@ footer p {
   font-size: 20px;
   color: #efefef;
 }
-
 .btn {
   background: darkslategray;
   border: none;
@@ -65,4 +64,10 @@ footer p {
 
 .btn:hover {
   background: #4f2f2f;
+}
+
+a {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 2000px;
 }
